# ns-engine

./: .gitignore  Cargo.toml  LICENSE  README.md  build-zip.rs  build.rs  test.ns
resources/: bridge.ns  characters.ini  characters.nsconf  credits.txt  engine.ini  engine.nsconf  ignore.ns  test.ns
resources/scripts/: bridge.ns  start.ns
src/: config.rs  draw.rs  helpers.rs  lib.rs  main.rs  main_dist.rs  node.rs  resource_manager.rs  tween.rs
src/containers/: adv_text.rs  background.rs  button.rs  character.rs  config_window.rs  credits_window.rs  gamescreen.rs  mainmenuscreen.rs  mod.rs  panel.rs  rich_text.rs  screen.rs  slider.rs  sprite.rs  stackcontainer.rs  text_sprite.rs  textbox.rs  ui.rs
src/states/: error.rs  game.rs  mainmenu.rs  mod.rs  splash.rs
