[package]
name = "ns-engine"
version = "0.1.0"
authors = ["Nobbele <realnobbele@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ggez = "0.5.1"
novelscript = { git = "https://github.com/nobbele/novelscript" }

[build-dependencies]
fs_extra = "1.2.0"
zip = "0.5.8"
walkdir = "2.3.1"
