[package]
name = "ns-engine"
version = "0.1.0"
authors = ["Nobbele <realnobbele@gmail.com>"]
edition = "2018"
build = "build-zip.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ggez = { git = "https://github.com/nobbele/ns-engine-ggez", branch = "devel" }
novelscript = { git = "https://github.com/nobbele/novelscript" }
nsconfig = { git = "https://github.com/nobbele/ns-config" }
serde_json = "1.0"
serde = "1.0.117"
rodio = "0.13.0"
image = "0.23.12"
simple-logging = "2.0.2"
log = { version = "0.4.11", features = ["std", "serde"] }
derive-new = "0.5"

[build-dependencies]
fs_extra = "1.2.0"
zip = "0.5.8"
walkdir = "2.3.1"

[profile.dev]
opt-level = 3
